style: fix connection test result vertical alignment

--- a/assets/css/admin/style.css
+++ b/assets/css/admin/style.css
@@ -184,6 +184,8 @@
 }
 
 #ctbp-connection-result {
+	display: inline-block;
 	margin-left: 4px;
 	vertical-align: middle;
+	line-height: 28px;
 }
